Rapid Prd/src/objects/Opp_RD_Permission_Set__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in New Opp Tab</description>
    <fields>
        <fullName>Additional_Opp_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Opp Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Qual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Qual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing/CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promac_UW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promac - UW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QC_Exuser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QC team restricted access for 1.       Main Business

2.       Applicant &amp; Credit

3.       Statements

4.       Business Review

5.       Site Surveys

6.       RADocs</description>
        <label>QC Exuser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tab_Order__c</fullName>
        <label>Tab Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Underwriting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underwriting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vf_Page_Name__c</fullName>
        <label>Vf Page Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Opp RD Permission Set</label>
</CustomObject>